# RankWise

./: .gitattributes  .gitignore  CHANGELOG.md  IMPROVEMENT-PLAN.md  INTEGRATION-GUIDE.md  README.md  README.ru.md  SKILL.md  legacy_committed.md  main_committed.md  pyproject.toml  requirements.txt  run_tests.ps1
benchmarks/: 01-well-optimized.txt  02-keyword-stuffed.txt  03-too-short.txt  04-no-meta.txt  05-product-page.txt  README.md
examples/: audit-example.md  before-after-article.md  integration-pipeline.md  meta-examples.md
scenarios/: alt-texts.md  article-generate.md  article-rewrite.md  audit-report.md  content-brief.md  home-page.md  meta-optimize.md  product-page.md  quick-fix.md  url-optimize.md  video-podcast.md
shared/: burned-words.md  checklist.md  keyword-rules.md  link-strategy.md  power-words.md  readability-params.md  schema-templates.md
tests/: conftest.py  test_benchmarks.py  test_languages.py  test_metrics.py  test_orchestrator.py
validator/: __init__.py  cli.py  metrics.py  orchestrator.py
