[project]
name = "rankwise-validator"
version = "1.2.1"
description = "Deterministic SEO metric computation for RankWise — 16 of 49 factors"
requires-python = ">=3.10"
dependencies = [
    "textstat>=0.7.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
rankwise-validator = "validator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
