[project]
name = "rankwise-validator"
version = "1.4.0"
description = "Deterministic SEO metric computation for RankWise — 16 of 49 factors"
requires-python = ">=3.10"
dependencies = [
    "readsight>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
rankwise-validator = "validator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
